# elasticli.rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
samples/default/: .secrets.toml  settings.toml
samples/proxy_enabled/: .secrets.toml  settings.toml
src/: arguments.rs  client.rs  configuration.rs  main.rs
