[package]
name = "elasticli"
version = "0.1.0"
edition = "2021"
description = "The missing Elasticsearch CLI"
keywords = ["cli", "elasticsearch", "elastic", "full-text"]
categories = ["command-line-interface", "command-line-utilities"]
repository = "https://github.com/giufus/elasticli.rs"
documentation = "https://github.com/giufus/elasticli.rs#readme"
authors = ["Giufus"]
readme = "README.md"
license = "MIT"

[dependencies]
async-trait = "0.1.68"
clap = { version = "4.3.3", features = ["derive"] }
hydroconf = "0.2.0"
openssl = { version = "0.10.55", features = ["vendored"] }
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4.2"
